syntax = "proto3";

option go_package = "genproto/comments";

service Comments {
    rpc CreateCommentByPodcastId(CreateComment) returns (ID);
    rpc GetCommentsByPodcastId(ID) returns (AllComments);
}

message CreateComment{
  string podcast_id = 1;
  string user_id = 2;
  string content = 3;
}

message ID {
  string id = 1;
}

message CommentInfo {
  string UserId = 1;
  string Content = 2;
  string created_at = 3;
  string updated_at = 5;
}

message Comment{
  string username = 2;
  string content = 3;
  string created_at = 4;
  string updated_at = 5;
}

message AllComments{
  repeated Comment comments = 1;
}